fixing email wrap and spacing

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -15,10 +15,6 @@
   @apply pt-28 xl:pt-28 2xl:pt-44;
 }
 
-.custom-width {
-  width: 40rem;
-}
-
 .nav-items {
   text-decoration: none;
   background-size: 100% 2px, 0 2px;
